public/css/style.css
html {
  position: relative;
  min-height: 100%;
}

body {
  font-family: "Montserrat", sans-serif;
  background-color: #444444;
  letter-spacing: 3px;
  color: #fff;
  margin: 0;
}

header {
  font-family: "Ubuntu", sans-serif;
}

#home {
  margin-top: 55px;
}

.jumbotron {
  background-image: url("../images/technology1.png");
  opacity: 0.8;
  background-size: 100%;
  max-width: 100%;
  height: 300px;
}

.jumbo-header {
  color: #fff;
  width: 55%;
  background-color: #000;
  text-align: center;
  opacity: 0.9;
  border-radius: 8px;
  padding: 15px;
  margin-top: 100px;
}

.section-header {
  text-align: center;
  margin: 20px 0;
}

.section-container {
  margin-bottom: 75px;
}

.about-me {
  text-align: center;
  font-family: "Roboto", sans-serif;
  letter-spacing: 2px;
  text-align: justify;
  text-indent: 40px;
}

.hello {
  border-radius: 0%;
  display: block;
  margin: auto;
  padding: 40px 0 40px;
  width: 50%;
}

hr {
  width: 20%;
  margin: auto;
  background-color: #fff;
  margin-bottom: 40px;
}

.first-paragraph {
  padding-top: 40px;
}

.about-me {
  color: #fff;
  font-family: "Roboto", sans-serif;
  letter-spacing: 2px;
  text-indent: 40px;
  padding-left: 50px;
  padding-right: 50px;
}

.section-header {
  color: #fff;
}

.section-container {
  margin-bottom: 75px;
}

.project-img {
  margin: auto;
}

footer {
  color: white;
  text-align: center;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 55px;
}

.resume-icon {
  width: 100%;
  padding: 10px;
  margin: auto;
}

.resume-text {
  color: #000;
}

.skills-container {
  text-align: center;
}

.timeline {
  margin-bottom: 100px;
  padding-top: 40px;
}

@media screen
and (max-width : 900px) {
  .project-img {
    width: 80%;
  }

  .skill-img {
    width: 30%;
  }
}

